@@ -127,12 +127,12 @@ public class MgfFileIterator implements MsFileIterator {
                             tempRt = tempRt.substring(2, tempRt.length() - 1);
                         }
 
-                        rt = new Double(tempRt);
+                        rt = Double.valueOf(tempRt);
 
                     } else if (rtWindow.length == 2) {
 
-                        rt1 = new Double(rtWindow[0]);
-                        rt2 = new Double(rtWindow[1]);
+                        rt1 = Double.valueOf(rtWindow[0]);
+                        rt2 = Double.valueOf(rtWindow[1]);
 
                     }
                 } catch (Exception e) {
