@@ -1301,7 +1301,7 @@ public class ModificationsDialog extends javax.swing.JDialog {
                     return getValueAt(i, columnIndex).getClass();
                 }
             }
-            return (new Double(0.0)).getClass();
+            return (Double.valueOf(0.0)).getClass();
         }
 
         @Override
@@ -1410,7 +1410,7 @@ public class ModificationsDialog extends javax.swing.JDialog {
                     return getValueAt(i, columnIndex).getClass();
                 }
             }
-            return (new Double(0.0)).getClass();
+            return (Double.valueOf(0.0)).getClass();
         }
 
         @Override
